group 'com.mobile'
version '0.0.1'

apply plugin: 'java'
apply plugin: 'checkstyle'

sourceCompatibility = 1.8
targetCompatibility = 1.8

task gradle_start {
    println '\n\n  _-_-_-_-_-_	STARTING GRADLE EXECUTION   _-_-_-_-_-_	\n\n'
}

repositories {
    mavenCentral()
}

dependencies {
    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.7'
    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.7'
    compile group: 'org.testng', name: 'testng', version: '6.9.10'
    compile group: 'io.appium', name: 'java-client', version: '4.1.2'
    compile files('lib/sikulixsetup-1.1.0.jar', 'lib/sikulixsetup-1.1.0.jar')
}

println '//\n------------------------Build tests---------------------------------'

test {

    systemProperty 'config', System.getProperty('config')

    // enable TestNG support (default is JUnit)
    useTestNG() {
    }

    // explicitly include or exclude tests
    // include '**/*Test*.*'

    // show standard out and standard error of the test JVM(s) on the console
    testLogging.showStandardStreams = true

    // set heap size for the test JVM(s)
    minHeapSize = "128m"
    maxHeapSize = "512m"

    // set JVM arguments for the test JVM(s)
    jvmArgs '-XX:MaxPermSize=256m'

    testLogging {
        // Show that tests are run in the command-line output
        events 'started', 'passed', 'skipped', 'failed'
    }
}